--- a/usercard/src/App.css
+++ b/usercard/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+body {
+  background-image: url('https://github.githubassets.com/images/modules/open_graph/github-mark.png');
+  background-size: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  width: 200px;
+  height: 40px;
+  background-color: white;
+  color: #24292e;
+  margin: 1%;
+  border-radius: 10px;
+  font-size: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button:hover {
+  background-color: #24292e;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
